auto(review): checkpoint in-progress review across budget, meal, task, and ops